--- a/demoportfolio.html
+++ b/demoportfolio.html
@@ -22,7 +22,7 @@
     <h2>Contact Info</h2>
 
     <ul>
-        <li><strong>Email:</strong><a href="mailto:">email@email.com</li>
+        <li><strong>Email:</strong><a href="mailto:">email@email.com</a></li>
         <li><strong>GitHub:</strong><a href="#">GitHublinkey</a></li>
         <li><strong>Portfolio</strong><a href="#">This is a test</a></li>
     </ul>
